--- a/package.json
+++ b/package.json
@@ -1,3 +1,27 @@
 {
-    "type": "module"
+  "type": "module",
+  "name": "programacionbackend",
+  "version": "1.0.0",
+  "main": "main.js",
+  "scripts": {
+    "dev": "nodemon src/main.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Francozelione1/Desafio1-Zelione.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Francozelione1/Desafio1-Zelione/issues"
+  },
+  "homepage": "https://github.com/Francozelione1/Desafio1-Zelione#readme",
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
