--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "type": "module",
   "name": "programacionbackend",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "app.js",
   "scripts": {
-    "dev": "nodemon src/main.js"
+    "dev": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
@@ -29,10 +29,12 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
-    "mongoose": "^7.5.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.0",
     "mongoose-paginate-v2": "^1.7.31",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.2"
