--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "type": "module",
   "name": "programacionbackend",
   "version": "1.0.0",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/app.js"
   },
@@ -37,6 +37,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.1"
   }
 }
