--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "test": "mocha --timeout 5000 src/test/routes/products.test.js"
   },
   "repository": {
     "type": "git",
@@ -19,13 +20,18 @@
   "homepage": "https://github.com/Francozelione1/Desafio1-Zelione#readme",
   "description": "",
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "chai": "^5.0.0",
+    "mocha": "^10.2.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "@faker-js/faker": "^8.2.0",
+    "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
@@ -33,13 +39,15 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0",
     "mongoose-paginate-v2": "^1.7.31",
-    "nodemailer": "^6.9.7",
+    "nodemailer": "^6.9.8",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
   }
